@@ -2,8 +2,10 @@
 
 TODO for 0.27
 
+- Illustrator import/export
 - Stamping
 - Empty bbox of horizontal/vertical lines bug
+- Toolbox scaling bug
 
 TODO for 0.26
 
