@@ -23,7 +23,7 @@
 
 #include "sp-guide.h"
 
-#define KNOT_EVENT_MASK (GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_POINTER_MOTION_MASK)
+#define KNOT_EVENT_MASK (GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_POINTER_MOTION_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK)
 
 #define hypot(a,b) sqrt ((a) * (a) + (b) * (b))
 
@@ -353,15 +353,17 @@ sp_knot_handler (GnomeCanvasItem * item, GdkEvent * event, gpointer data)
 #if 0
 			gdk_pointer_ungrab (event->button.time);
 #endif
-			gnome_canvas_item_grab (knot->item,
-						KNOT_EVENT_MASK,
-						knot->cursor[SP_KNOT_STATE_DRAGGING],
-						event->button.time);
+			sp_canvas_item_grab (knot->item,
+					     KNOT_EVENT_MASK,
+					     knot->cursor[SP_KNOT_STATE_DRAGGING],
+					     event->button.time);
 			
+#if 0
 			/* fixme: Top hack (Lauris) */
 			/* fixme: If we add key masks to event mask, Gdk will abort (Lauris) */
 			/* fixme: But Canvas actualle does get key events, so all we need is routing these here */
 			knot->item->canvas->grabbed_event_mask |= (GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK);
+#endif
 #endif
 			sp_knot_set_flag (knot, SP_KNOT_GRABBED, TRUE);
 			grabbed = TRUE;
